--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-*.pydevproject
 .project
 .metadata
-bin/**
-tmp/**
-tmp/**/*
+GingerMotif/bin/**
+GingerMotif/tmp/**
+/GingerMotiftmp/**/*
 *.tmp
 *.bak
 *.swp
@@ -12,7 +11,7 @@ local.properties
 .classpath
 .settings/
 .loadpath
-/src/main/resources/rebel.xml
+*.class
 # External tool builders
 .externalToolBuilders/
 # Locally stored "Eclipse launch configurations"
